# Hunyuan3D-2.1

./: .env.example  .gitignore  AGENTS.md  MANIFEST.in  README.md  demo.py  gradio_app.py  pyproject.toml  requirements.txt  torchvision_fix.py
.github/workflows/: deploy-pages.yml  python-ci.yml  release.yml  sync-hf-space.yml
docs/: ENVIRONMENT.md  SPACE_BUILD_ESCALATION.md  SPACE_DEPLOYMENT.md  index.html
hy3dpaint/: README.md  __init__.py  bootstrap.py  config.py  demo.py  glb_support.py  hf_space_push.py  image_batches.py  output_paths.py  pipeline_inputs.py  runtime_compat.py  runtime_paths.py  runtime_profile.py  space_runtime_deps.py  textureGenPipeline.py
hy3dpaint/DifferentiableRenderer/: mesh_utils.py
hy3dpaint/cfgs/: hunyuan-paint-pbr.yaml
hy3dpaint/utils/: multiview_utils.py
hy3dshape/: __init__.py  requirements.txt
hy3dshape/hy3dshape/: __init__.py
hy3dshape/hy3dshape/utils/: utils.py
requirements/: base.txt  build.txt  dev.txt  space.txt
scripts/: bootstrap_github_repo.sh  bootstrap_runtime.py  ensure_hf_space.py  push_hf_space.py  reproduce_space_pip_layer.sh  resolve_hf_space_config.py
tests/: test_bootstrap_runtime.py  test_dependency_manifests.py  test_glb_support.py  test_hf_space_push.py  test_hy3dpaint_runtime_paths.py  test_package_discovery.py  test_runtime_compat.py  test_runtime_profile.py  test_space_runtime_deps.py
