[build-system]
requires = ["setuptools>=77", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "hunyuan3d-2-1"
version = "0.1.0"
description = "Hunyuan3D-2.1 shape and texture generation workspace"
readme = "README.md"
requires-python = ">=3.10,<3.14"
license = "LicenseRef-Tencent-Hunyuan-Non-Commercial"
license-files = ["LICENSE"]
authors = [{ name = "Tencent Hunyuan Team" }]
dependencies = [
    "accelerate==1.1.1",
    "basicsr==1.4.2",
    "configargparse==1.7",
    "diffusers==0.30.0",
    "einops==0.8.0",
    "fastapi==0.115.12",
    "gradio==5.33.0",
    "huggingface-hub==0.30.2",
    "imageio==2.36.0",
    "numpy==1.24.4",
    "omegaconf==2.3.0",
    "onnxruntime==1.16.3",
    "open3d==0.18.0",
    "opencv-python==4.10.0.84",
    "pandas==2.2.2",
    "packaging>=24,<26",
    "pillow>=10,<12",
    "psutil==6.0.0",
    "pydantic==2.10.6",
    "pygltflib==1.16.3",
    "pymeshlab==2025.7.post1",
    "pythreejs>=2.4,<3",
    "pyyaml==6.0.2",
    "realesrgan==0.3.0",
    "rembg==2.0.65",
    "safetensors==0.4.4",
    "scikit-image==0.24.0",
    "scipy==1.14.1",
    "timm>=1.0,<2",
    "tqdm==4.66.5",
    "transformers==4.46.0",
    "trimesh==4.4.7",
    "uvicorn==0.34.3",
    "xatlas==0.0.9",
]

[project.optional-dependencies]
torch = ["torch==2.5.1", "torchaudio==2.5.1", "torchvision==0.20.1"]
glb = ["bpy==4.0"]
cuda = ["cupy-cuda12x==13.4.1"]
train = [
    "pytorch-lightning==1.9.5",
    "tb-nightly==2.18.0a20240726",
    "torchmetrics==1.6.0",
]
build = [
    "build>=1.2,<2",
    "ninja==1.11.1.1",
    "pybind11==2.13.4",
    "wheel>=0.45,<1",
]
test = ["pytest>=8.3,<9", "pytest-cov>=6,<7"]
dev = [
    "build>=1.2,<2",
    "mypy>=1.13,<2",
    "ninja==1.11.1.1",
    "pre-commit>=4,<5",
    "pybind11==2.13.4",
    "pytest>=8.3,<9",
    "pytest-cov>=6,<7",
    "ruff>=0.11,<0.12",
    "wheel>=0.45,<1",
]

[tool.setuptools]
include-package-data = true

[tool.setuptools.packages.find]
where = ["."]
include = ["hy3dpaint*", "hy3dshape*"]

[tool.pytest.ini_options]
testpaths = ["tests"]
